--- a/backend/src/main/resources/templates/index.html
+++ b/backend/src/main/resources/templates/index.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
-<html xmlns:th="http://thymeleaf.org">
+<html>
 <head>
     <meta charset="UTF-8">
     <title>Paypal Intergraion</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-          crossorigin="anonymous">
+          rel="stylesheet">
 </head>
 <body>
 <div class="container">
     <h1 class="text-center mt-5">Testing paypal</h1>
-    <form method="post" action="/api/payment/create" class="mt-5 card p-3">
+    <form action="/api/payment/create" class="mt-5 card p-3" method="post">
         <div class="d-flex justify-content-center">
-            <button type="submit" class="btn btn-primary">
+            <button class="btn btn-primary" type="submit">
                 Pay with paypal
             </button>
         </div>
     </form>
-</div>>
+</div>
+>
 </body>
 </html>
