--- a/backend/src/main/resources/templates/paymentError.html
+++ b/backend/src/main/resources/templates/paymentError.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html xmlns:th="http://thymeleaf.org">
+<html>
 <head>
     <meta charset="UTF-8">
     <title>Paypal Intergraion</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-          crossorigin="anonymous">
+          rel="stylesheet">
 </head>
 <body>
 <div class="container">
@@ -15,6 +15,7 @@
             back to home
         </a>
     </div>
-</div>>
+</div>
+>
 </body>
 </html>
